--- a/ShopAdminApp/ShopAdminApp/Pages/CategoryPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/CategoryPage.xaml
@@ -1,10 +1,44 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage
-    xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="ShopAdminApp.CategoryPage">
-    <ContentPage.Content>
-        
-    </ContentPage.Content>
-</ContentPage>
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
+             xmlns:models="clr-namespace:ShopAdminApp.Models;assembly=ShopAdminApp"
+			 x:Class="ShopAdminApp.CategoryPage"
+			 Title="Category">
+     <Grid>  
+        <Grid>  
+            <Grid.RowDefinitions>  
+                <RowDefinition Height="Auto"/>  
+                <RowDefinition Height="*"/>  
+            </Grid.RowDefinitions>
 
+            <Frame HeightRequest="20">
+                <SearchBar Placeholder="Search" />
+            </Frame>
+
+            <ListView
+                x:Name="listviewCategories"
+                Grid.Row="1"
+                HorizontalOptions="FillAndExpand"
+                HasUnevenRows="True">
+                <ListView.ItemTemplate>  
+                    <DataTemplate>  
+                        <ViewCell>  
+                            <Grid HorizontalOptions="FillAndExpand">  
+                                <Grid.RowDefinitions>  
+                                    <RowDefinition Height="Auto"/> 
+                                </Grid.RowDefinitions>
+                                <Label Margin="20,10,0,-20" Text="{Binding name}" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" />
+                            </Grid>  
+                        </ViewCell>  
+                    </DataTemplate>  
+                </ListView.ItemTemplate>
+            </ListView>  
+        </Grid>  
+        <ActivityIndicator x:Name="ProgressLoader" Color="#0098e1" IsRunning="True">
+          <ActivityIndicator.Scale>
+            <OnPlatform x:TypeArguments="x:Double" iOS="1.0" Android="0.2" />
+          </ActivityIndicator.Scale>
+        </ActivityIndicator> 
+    </Grid>  
+</ContentPage>
