--- a/ShopAdminApp/ShopAdminApp/Pages/FlyoutMenuPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/FlyoutMenuPage.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ShopAdminApp;assembly=ShopAdminApp"
              x:Class="ShopAdminApp.FlyoutMenuPage"
-             Padding="0,40,0,0"
              IconImageSource="hamburger.png"
              Title="Shop Admin">
     <StackLayout>
-        <Image Source="default_user.png" />
+        <Frame BackgroundColor="#0098e1" HasShadow="True">
+            <Image Source="default_user.png"/>
+        </Frame>
 
         <ListView x:Name="listView" x:FieldModifier="public" Margin="20,20,0,0">
             <ListView.ItemsSource>
