--- a/ShopAdminApp/ShopAdminApp/Pages/UsersPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/UsersPage.xaml
@@ -4,6 +4,7 @@
 			 xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
              xmlns:models="clr-namespace:ShopAdminApp.Models;assembly=ShopAdminApp"
 			 x:Class="ShopAdminApp.UsersPage"
+             BackgroundColor="#FFF"
 			 Title="User">
      <Grid>  
         <Grid>  
@@ -11,59 +12,66 @@
                 <RowDefinition Height="Auto"/>  
                 <RowDefinition Height="*"/>  
             </Grid.RowDefinitions>
-            <StackLayout>
+            <StackLayout Grid.Row="0">
                 <Frame HeightRequest="20">
                     <SearchBar Placeholder="Search" />
                 </Frame>
+            </StackLayout>
 
-                 <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+            <StackLayout Grid.Row="1">
+                <ScrollView Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                    <StackLayout>
+                        <Grid Padding="10,10,10,10"  HeightRequest="30" BackgroundColor="#0098e1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
 
-                    <Label Grid.Column="0" Grid.Row="0" Margin="20,10,0,-20" Text="First Name" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" TextColor="#0098e1" />
-                    <Label Grid.Column="1" Grid.Row="0" Margin="20,10,0,-20" Text="Last Name" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" TextColor="#0098e1" />
-                    <Label Grid.Column="2" Grid.Row="0" Margin="20,10,0,-20" Text="Email" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" TextColor="#0098e1" />
-                    <Label Grid.Column="3" Grid.Row="0" Margin="20,10,0,-20" Text="Created Date" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" TextColor="#0098e1" />
-                </Grid>
+                            <Label Grid.Column="0" Grid.Row="0" Text="First Name" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#FFF" />
+                            <Label Grid.Column="1" Grid.Row="0" Text="Last Name" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#FFF" />
+                            <Label Grid.Column="2" Grid.Row="0" Text="Email"  HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#FFF" />
+                            <Label Grid.Column="3" Grid.Row="0" Text="Created Date" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#FFF" />
+                        </Grid>
+                         <Frame>
+                            <ListView
+                                x:Name="listviewUsers"
+                                HorizontalOptions="FillAndExpand"
+                                HasUnevenRows="True">
+                                <ListView.ItemTemplate>  
+                                    <DataTemplate>  
+                                        <ViewCell>  
+                                            <Grid HorizontalOptions="FillAndExpand">  
+                                                <Grid.RowDefinitions>  
+                                                    <RowDefinition Height="Auto"/> 
+                                                </Grid.RowDefinitions>
+                                                <StackLayout>
+                                                    <Grid>
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="*" />
+                                                        </Grid.ColumnDefinitions>
+                                                        <Grid.RowDefinitions>
+                                                            <RowDefinition Height="*" />
+                                                            <RowDefinition Height="*" />
+                                                        </Grid.RowDefinitions>
+
+                                                        <Label Grid.Column="0" Text="{Binding first_name}" HorizontalOptions="StartAndExpand" FontSize="Micro" />
+                                                        <Label Grid.Column="1" Text="{Binding last_name}" HorizontalOptions="StartAndExpand" FontSize="Micro" />
+                                                        <Label Grid.Column="2" Text="{Binding email}" HorizontalOptions="StartAndExpand" FontSize="Micro" />
+                                                        <Label Grid.Column="3" Text="{Binding created_at}" HorizontalOptions="StartAndExpand" FontSize="Micro" />
+                                                    </Grid>
+                                                </StackLayout>
+                                            </Grid>  
+                                        </ViewCell>  
+                                    </DataTemplate>  
+                                </ListView.ItemTemplate>
+                            </ListView>  
+                        </Frame>
+                    </StackLayout>
+                </ScrollView>
             </StackLayout>
             
-            <ListView
-                x:Name="listviewUsers"
-                Grid.Row="1"
-                HorizontalOptions="FillAndExpand"
-                HasUnevenRows="True">
-                <ListView.ItemTemplate>  
-                    <DataTemplate>  
-                        <ViewCell>  
-                            <Grid HorizontalOptions="FillAndExpand">  
-                                <Grid.RowDefinitions>  
-                                    <RowDefinition Height="Auto"/> 
-                                </Grid.RowDefinitions>
-                                <StackLayout>
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="*" />
-                                            <RowDefinition Height="*" />
-                                        </Grid.RowDefinitions>
-
-                                        <Label Grid.Column="0" Margin="20,10,0,-20" Text="{Binding first_name}" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" />
-                                        <Label Grid.Column="1" Margin="20,10,0,-20" Text="{Binding first_name}" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" />
-                                        <Label Grid.Column="2" Margin="20,10,0,-20" Text="{Binding email}" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" />
-                                        <Label Grid.Column="3" Margin="20,10,0,-20" Text="{Binding created_at}" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" />
-                                    </Grid>
-                                </StackLayout>
-                            </Grid>  
-                        </ViewCell>  
-                    </DataTemplate>  
-                </ListView.ItemTemplate>
-            </ListView>  
         </Grid>  
         <ActivityIndicator x:Name="ProgressLoader" Color="#0098e1" IsRunning="True">
           <ActivityIndicator.Scale>
