--- a/ShopAdminApp/ShopAdminApp/Pages/LoginPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/LoginPage.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              x:Class="ShopAdminApp.LoginPage"
              NavigationPage.HasNavigationBar="false"
              NavigationPage.HasBackButton="false"
              BackgroundColor="#0098e1">
+
     <StackLayout VerticalOptions="CenterAndExpand" Padding="20">
         <ActivityIndicator x:Name="ProgressLoader" Color="#FFF" IsRunning="True">
           <ActivityIndicator.Scale>
@@ -23,21 +25,32 @@
                            HorizontalOptions="Center"
                            VerticalOptions="Center"/>
                     <Image Source="login_logo.png" />
-                    <Label Text="{Binding Message}" IsVisible="False" TextColor="Red"/>
-                    <FlexLayout FlexLayout.Grow="1">
-                        <Image Source="user.png" />
-                        <Entry Placeholder="Email" x:Name="EmailEntry" Keyboard="Email"  FlexLayout.Grow="1" />
-                        <Label x:Name="LoginModel_UsernameError" IsVisible="False" TextColor="Red" />
-                    </FlexLayout>
 
-                    <FlexLayout FlexLayout.Grow="1">
-                        <Image Source="password.png" />
-                        <Entry Placeholder="Password" IsPassword="True" x:Name="PasswordEntry" FlexLayout.Grow="1" />
-                        <Label x:Name="LoginModel_PasswordError" IsVisible="False" TextColor="Red" />
-                    </FlexLayout>
+                    <StackLayout>
+                        <FlexLayout FlexLayout.Grow="1">
+                            <Image Source="user.png" />
+                            <Entry Placeholder="Email" x:Name="EmailEntry" Keyboard="Email"  FlexLayout.Grow="1" />
+                        </FlexLayout>
+                        <Label x:Name="EmailEntryLabel"
+                                Text="Invalid email"
+                                TextColor="Red"
+                                FontSize="10"
+                                IsVisible="False"
+                                />
+                    </StackLayout>
 
+                    <StackLayout>
+                        <FlexLayout FlexLayout.Grow="1">
+                            <Image Source="password.png" />
+                            <Entry Placeholder="Password" IsPassword="True" x:Name="PasswordEntry" FlexLayout.Grow="1" />
+                        </FlexLayout>
+                         <Label x:Name="PasswordEntryLabel"
+                                Text="Invalid password"
+                                TextColor="Red"
+                                FontSize="10"
+                                IsVisible="False"/>
+                    </StackLayout>
                     <Button Text="Login" Clicked="OnLoginButtonClicked" BackgroundColor="#0098e1" TextColor="#FFF" Margin="0,10,0,0" />
-                    <Label Text="{Binding LoginMessage}" TextColor="Red" />
                 </StackLayout>
             </Frame>
     </StackLayout>
