--- a/ShopAdminApp/ShopAdminApp/Pages/CategoryPage.xaml
+++ b/ShopAdminApp/ShopAdminApp/Pages/CategoryPage.xaml
@@ -4,36 +4,72 @@
 			 xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
              xmlns:models="clr-namespace:ShopAdminApp.Models;assembly=ShopAdminApp"
 			 x:Class="ShopAdminApp.CategoryPage"
-			 Title="Category">
+             BackgroundColor="#FFF"
+			 Title="User">
      <Grid>  
         <Grid>  
             <Grid.RowDefinitions>  
                 <RowDefinition Height="Auto"/>  
                 <RowDefinition Height="*"/>  
             </Grid.RowDefinitions>
+            <StackLayout Grid.Row="0">
+                <Frame HeightRequest="20">
+                    <SearchBar Placeholder="Search" />
+                </Frame>
+            </StackLayout>
 
-            <Frame HeightRequest="20">
-                <SearchBar Placeholder="Search" />
-            </Frame>
+            <StackLayout Grid.Row="1">
+                <ScrollView Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                    <StackLayout>
+                        <Grid Padding="10,10,10,10"  HeightRequest="30" BackgroundColor="#0098e1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
 
-            <ListView
-                x:Name="listviewCategories"
-                Grid.Row="1"
-                HorizontalOptions="FillAndExpand"
-                HasUnevenRows="True">
-                <ListView.ItemTemplate>  
-                    <DataTemplate>  
-                        <ViewCell>  
-                            <Grid HorizontalOptions="FillAndExpand">  
-                                <Grid.RowDefinitions>  
-                                    <RowDefinition Height="Auto"/> 
-                                </Grid.RowDefinitions>
-                                <Label Margin="20,10,0,-20" Text="{Binding name}" HeightRequest="50" HorizontalOptions="StartAndExpand" FontAttributes="Bold" FontSize="Micro" />
-                            </Grid>  
-                        </ViewCell>  
-                    </DataTemplate>  
-                </ListView.ItemTemplate>
-            </ListView>  
+                            <Label Grid.Column="0" Grid.Row="0" Text="Name" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#FFF" />
+                            <Label Grid.Column="1" Grid.Row="0" Text="Description" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#FFF" />
+                            <Label Grid.Column="2" Grid.Row="0" Text="Created Date" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#FFF" />
+                        </Grid>
+                         <Frame>
+                            <ListView
+                                x:Name="listviewCategories"
+                                HorizontalOptions="FillAndExpand"
+                                HasUnevenRows="True">
+                                <ListView.ItemTemplate>  
+                                    <DataTemplate>  
+                                        <ViewCell>  
+                                            <Grid HorizontalOptions="FillAndExpand">  
+                                                <Grid.RowDefinitions>  
+                                                    <RowDefinition Height="Auto"/> 
+                                                </Grid.RowDefinitions>
+                                                <StackLayout>
+                                                    <Grid>
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="*" />
+                                                        </Grid.ColumnDefinitions>
+                                                        <Grid.RowDefinitions>
+                                                            <RowDefinition Height="*" />
+                                                            <RowDefinition Height="*" />
+                                                        </Grid.RowDefinitions>
+
+                                                        <Label Grid.Column="0" Text="{Binding name}" HorizontalOptions="StartAndExpand" FontSize="Micro" />
+                                                        <Label Grid.Column="1" Text="{Binding description}" HorizontalOptions="StartAndExpand" FontSize="Micro" />
+                                                        <Label Grid.Column="3" Text="{Binding created_at}" HorizontalOptions="StartAndExpand" FontSize="Micro" />
+                                                    </Grid>
+                                                </StackLayout>
+                                            </Grid>  
+                                        </ViewCell>  
+                                    </DataTemplate>  
+                                </ListView.ItemTemplate>
+                            </ListView>  
+                        </Frame>
+                    </StackLayout>
+                </ScrollView>
+            </StackLayout>
+            
         </Grid>  
         <ActivityIndicator x:Name="ProgressLoader" Color="#0098e1" IsRunning="True">
           <ActivityIndicator.Scale>
